# ml-group03_ett

./: README.md
ett_website_brainstorming/: Group03_ETT_Mockup.xopp  docker_cr.xcf
group03_ett/: .dockerignore  .gitignore  .gitlab-ci.yml  README.rst  config.toml  docker-compose.yml  dockerfile  makefile  pyproject.toml  vscode_group03_ett.code-workspace
group03_ett/docs/: additionalDevDocumentation.rst  conf.py  ett_predictor.rst  index.rst  modules.rst  test_ett_predictor.rst  test_main.rst
group03_ett/docs/devCreated/: Sprint2Documentation.rst  Sprint3Documentation.rst  Sprint4Documentation.rst  dockerHierarchy.rst  howTo_AddPythonRequirements.rst  howTo_Docker.rst  howTo_Document.rst  questions.rst  startingGuide.rst
group03_ett/group03_ett/: ett_predictor.py  main.py  test_ett_predictor.py  test_main.py
group03_ett/html/: group03.html  index.html  kiel_gdynia_coords.js  rotterdam_hamburg_coords.js  style.css
group03_ett/tests/: test.py
