[tool.poetry]
name = "group03_ett"
version = "0.1.0"
description = "Group Project for Software Development 2021"
authors = ["navkovs"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
numpy = "^1.19.5"
pylint = "^2.8.2"
requests = "^2.25.1"
pandas = "^1.2.4"
Flask = "^2.0.1"
autopep8 = "^1.5.7"
Flask-Cors = "^3.0.10"
sklearn = "^0.0"
pyppdf = "^0.1.2"
pyppeteer = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
